--- a/Yad2Replicate/src/app/app.component.html
+++ b/Yad2Replicate/src/app/app.component.html
@@ -1,8 +1,18 @@
-<app-header></app-header>
+<!-- <app-header></app-header>
 <div class="side-by-side">
   <app-sign-up></app-sign-up>
   <app-signup-login-side class="app-signup-login-side"></app-signup-login-side>
+</div> -->
+
+
+<!-- <app-header></app-header>
+<div class="side-by-side">
+  <app-log-in></app-log-in>
+  <app-signup-login-side class="app-signup-login-side"></app-signup-login-side>
 </div>
+<app-footer></app-footer> -->
+
+<app-header></app-header>
 
 
 
