--- a/Yad2Replicate/src/app/header/header.component.html
+++ b/Yad2Replicate/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="Header-container">
+<!-- <div class="Header-container">
   <img src="../assets/download.png" alt="">
   <a href="">נדל"ן</a>
   <a href="">רכב</a>
@@ -11,6 +11,48 @@
   <a href="">מודעות שאהבתי</a>
   <a href="">UserName</a>
   <a href="">פרסום מודעה חדשה</a>
+
+
+</div> -->
+
+<div class="Header-container">
+  <div class="internal-container">
+    <img class="logo-img" src="../assets/download.png" alt="">
+    <span class="hamburger-btn">|||</span>
+    <p>תפריט</p>
+    <div class="hamburger-items">
+      <a href="">נדל"ן</a>
+      <a href="">רכב</a>
+      <a href="">יד שניה</a>
+      <a href="">דרושים IL</a>
+      <a href="">עסקים למכירה</a>
+      <a href="">חיות מחמד</a>
+      <a href="">בעלי מקצוע</a>
+      <a href="">מגזין יד2</a>
+    </div>
+
+
+  </div>
+
+  <div>
+    <img src="/src/assets/header-icons/chat-icon1.png" alt="chat-icon">
+    <button class="new-add-btn">+ פרסום מודעה חדשה</button>
+  </div>
+</div>
+
+<div class="second-header-container">
+  <div class="second-header-items">
+    <a href="">מכירה</a>
+    <a href="">השכרה</a>
+    <a href="">בתים מארחים</a>
+    <a href="">נדל"ן מסחרי</a>
+  </div>
+
+  <div>
+    <a href="">כונס נכסים</a>
+    <a href="">יד1 דירות חדשות</a>
+    <a href="">הערכת שווי נכס</a>
+  </div>
 
 
 </div>
