--- a/Yad2Replicate/src/app/log-in/log-in.component.html
+++ b/Yad2Replicate/src/app/log-in/log-in.component.html
@@ -1,1 +1,84 @@
-<p>log-in works!</p>
+<img class="logo-img" src="../assets/download.png" alt="">
+<div class="external-container">
+  <div class="nice-to-meet-container">
+    <img class="profile-img" src="../../assets/icon_signup_profil_plus.svg" alt="profile-pictures">
+  <p class="nice-to-meet">היי, טוב לראות אותך</p>
+  </div>
+
+<form [formGroup]="signInForm" (ngSubmit)="handleSubmit()" >
+
+<div class="user-box">
+  <label for="email">מייל</label>
+    <div  class="password-input-container">
+
+    <input
+      id="email"
+      type="text"
+      formControlName="email"
+      placeholder="yourmail@email.co.il"
+      required="true"
+      (input)="updaIsFormSubmitted()"
+      [ngClass]="{'invalid-input': !isInputValid(signInForm, 'email')}"
+    >
+    <span class="invisibleicon">
+      <i></i>
+    </span>
+  </div>
+  <div *ngIf= "!isInputValid(signInForm, 'email')" class="error-message">
+    משהו לא תקין במייל, אולי התפספס ה "&#64;"
+  </div>
+</div>
+
+<div class="user-box">
+  <label for="password">סיסמה</label>
+  <div class="password-input-container">
+    <input
+      id="password"
+      [type]="showPassword ? 'text' : 'password'"
+      placeholder="הקלד סיסמה"
+      formControlName="password"
+      (input)="updaIsFormSubmitted()"
+
+    >
+    <span class="eye-icon" (click)="togglePasswordVisibility()">
+      <i [ngClass]="showPassword ? 'fa fa-eye' : 'fa fa-eye-slash'"></i>
+    </span>
+  </div>
+</div>
+<a href="">שכחתי סיסמה</a>
+
+
+  <button
+    class="signUp-btn"
+    type="submit"
+    (mouseover)="onMouseOver()"
+    (mouseout)="onMouseOut()"
+    [ngStyle]="{'background-color': buttonColor}"
+    >התחברות
+  </button>
+</form>
+
+
+
+  <p class="or-login">או התחברו דרך</p>
+  <div class="btn-google-apple">
+    <button>
+      <!-- <img src="./../../assets/google_Icon.svg" alt=""> -->
+      גוגל
+    </button>
+
+    <button>
+      <!-- <img src="./../../assets/apple-Icon.svg" alt=""> -->
+      אפל
+    </button>
+  </div>
+  <p>אין לך חשבון?
+    <a href="">להרשמה</a>
+  </p>
+
+
+</div>
+
+
+
+
