--- a/Yad2Replicate/src/app/signup-login-side/signup-login-side.component.html
+++ b/Yad2Replicate/src/app/signup-login-side/signup-login-side.component.html
@@ -1,3 +1,4 @@
+<div class="main-external-container">
 <h1>לקנות מהר, למכור מהר.<br>ויש לנו אחלה כלים לזה.</h1>
 <div class="icon-contaner-external">
 <div class="icons-container">
@@ -19,5 +20,6 @@
 
   <img src="./../../assets/icon_profile.svg" alt="">
   <p>איזור אישי</p>
+</div>
 </div>
 </div>
