--- a/Yad2Replicate/src/app/app.component.scss
+++ b/Yad2Replicate/src/app/app.component.scss
@@ -1,23 +1,32 @@
-
 *{
-
   direction: rtl;
   font-family: Rubik,sans-serif;
   font-size: 17px;
   color: rgb(86, 87, 88);
-
 }
 body {
 }
-// @media (min-width: 880px){
-//   .side-by-side{
-//     display: flex;
-//     gap: 10px;
-//     justify-content: center;
-//   }
-
-// }
 
 .app-signup-login-side{
   display: none;
+}
+
+@media (min-width: 880px){
+  *{
+    background: rgb(251 242 234)
+
+    }
+
+  .side-by-side{
+    display: flex;
+    gap: 190px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .app-signup-login-side{
+    display: flex;
+  }
+
+
 }
