--- a/Yad2Replicate/src/app/signup-login-side/signup-login-side.component.scss
+++ b/Yad2Replicate/src/app/signup-login-side/signup-login-side.component.scss
@@ -1,7 +1,18 @@
+*{
 
+}
 .icon-contaner-external{
   display: flex;
-  gap: 22px;
+  gap: 15px;
+
+}
+.icons-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 60px;
+  min-width: 60px;
 }
 // h1{
 //   margin-top: 150px;
@@ -10,10 +21,15 @@
 // }
 
 @media (min-width:880px) {
+  .main-external-container{
+    display: flex;
+    flex-direction: column; 
+  }
   h1{
     margin-top: 10px;
-    font-size: 2.1rem;
+    font-size: 2.3rem;
     font-weight: inherit;
+
   }
 }
 
