drop-down-property-types  complete

--- a/Yad2Replicate/src/app/app.component.html
+++ b/Yad2Replicate/src/app/app.component.html
@@ -3,6 +3,7 @@
   <app-sign-up></app-sign-up>
   <app-signup-login-side class="app-signup-login-side"></app-signup-login-side>
 </div> -->
+<!-- <app-material></app-material> -->
 
 
 <!-- <app-header></app-header>
@@ -12,7 +13,16 @@
 </div>
 <app-footer></app-footer> -->
 
-<app-header></app-header>
+<!-- <app-header></app-header> -->
+
+<!-- <div class="search-bar">
+  <app-search-bar></app-search-bar>
+</div>
+
+<router-outlet></router-outlet> -->
+
+<app-drop-down-property-types></app-drop-down-property-types>
+
 
 
 
