--- a/Yad2Replicate/src/app/header/header.component.html
+++ b/Yad2Replicate/src/app/header/header.component.html
@@ -19,7 +19,7 @@
   <div class="internal-container">
     <img class="logo-img" src="../assets/download.png" alt="">
     <span class="hamburger-btn">|||</span>
-    <p>תפריט</p>
+    <p class="manu">תפריט</p>
     <div class="hamburger-items">
       <a href="">נדל"ן</a>
       <a href="">רכב</a>
@@ -34,9 +34,13 @@
 
   </div>
 
-  <div>
-    <img src="/src/assets/header-icons/chat-icon1.png" alt="chat-icon">
+  <div class="left-side">
+    <img class="bell" src="../assets/bell.png" alt="bell-icon">
+    <img class="heart" src="../assets/heart.png" alt="heart-icon">
+    <img class="user" src="../assets/user.png" alt="user-icon">
     <button class="new-add-btn">+ פרסום מודעה חדשה</button>
+
+    
   </div>
 </div>
 
