search-input complete

--- a/Yad2Replicate/src/app/app.component.html
+++ b/Yad2Replicate/src/app/app.component.html
@@ -13,16 +13,15 @@
 </div>
 <app-footer></app-footer> -->
 
-<!-- <app-header></app-header> -->
+<app-header></app-header>
 
-<!-- <div class="search-bar">
+ <div class="search-bar">
   <app-search-bar></app-search-bar>
 </div>
 
-<router-outlet></router-outlet> -->
+<!-- <router-outlet></router-outlet>  -->
 
-<app-drop-down-property-types></app-drop-down-property-types>
-
+<!-- <app-drop-down-property-types></app-drop-down-property-types> -->
 
 
 
