--- a/Yad2Replicate/src/app/search-property-bar/search-bar/search-bar.component.scss
+++ b/Yad2Replicate/src/app/search-property-bar/search-bar/search-bar.component.scss
@@ -21,3 +21,17 @@
     }
   }
 }
+.asset-info{
+  display: flex;
+  flex-direction: column;
+}
+form{
+  display: flex;
+  gap: 10px;
+}
+
+.drop-down-property-types-hide{
+  display: none;
+}
+.drop-down-property-types-show{
+}
