search-input-button-complet

--- a/Yad2Replicate/src/app/app.component.scss
+++ b/Yad2Replicate/src/app/app.component.scss
@@ -1,8 +1,8 @@
 *{
-  direction: rtl;
-  font-family: Rubik,sans-serif;
+  // direction: rtl;
+  // font-family: Rubik,sans-serif;
   font-size: 17px;
-  color: rgb(86, 87, 88);
+  // color: rgb(86, 87, 88);
 }
 
 
