--- a/Yad2Replicate/src/app/header/header.component.html
+++ b/Yad2Replicate/src/app/header/header.component.html
@@ -37,10 +37,10 @@
   <div class="left-side">
     <img class="bell" src="../assets/bell.png" alt="bell-icon">
     <img class="heart" src="../assets/heart.png" alt="heart-icon">
-    <img class="user" src="../assets/user.png" alt="user-icon">
+    <img class="user" src="../assets/user.png" alt="user-icon" routerLink="/login">
     <button class="new-add-btn">+ פרסום מודעה חדשה</button>
 
-    
+
   </div>
 </div>
 
