--- a/Yad2Replicate/src/app/log-in/log-in.component.html
+++ b/Yad2Replicate/src/app/log-in/log-in.component.html
@@ -73,7 +73,7 @@
     </button>
   </div>
   <p>אין לך חשבון?
-    <a href="">להרשמה</a>
+    <a href="" routerLink="/signUp">להרשמה</a>
   </p>
 
 
