--- a/Yad2Replicate/src/app/search-property-bar/input-price/input-price.component.html
+++ b/Yad2Replicate/src/app/search-property-bar/input-price/input-price.component.html
@@ -1,4 +1,4 @@
-<label for="">מחיר</label>
+<label for="">{{lableInput}}</label>
 <div>
   <input type="number"  placeholder="מ-">
   <input type="number" placeholder="עד-">
