--- a/Yad2Replicate/src/app/sign-up/sign-up.component.html
+++ b/Yad2Replicate/src/app/sign-up/sign-up.component.html
@@ -107,7 +107,7 @@
     </button>
   </div>
   <p>כבר יש לך חשבון?
-    <a href="">להתחברות</a>
+    <a href="" routerLink="/login">להתחברות</a>
   </p>
 
 
