--- a/Yad2Replicate/src/app/search-property-bar/search-bar/search-bar.component.html
+++ b/Yad2Replicate/src/app/search-property-bar/search-bar/search-bar.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
 <div class="external-container">
   <!-- <div class="container"> -->
     <div class="first-container">
@@ -40,8 +40,9 @@
     </div>
 
     <app-input-rooms-number></app-input-rooms-number>
-    <app-input-price></app-input-price>
-
+    <app-input-price [lableInput]="priceLable"></app-input-price>
+    <app-addvence-search-button></app-addvence-search-button>
+    <app-search-proprerty-button></app-search-proprerty-button>
   </form>
 
 
