search-input-button-complet

--- a/Yad2Replicate/src/app/app.component.html
+++ b/Yad2Replicate/src/app/app.component.html
@@ -21,6 +21,9 @@
 
 <router-outlet></router-outlet>
 
+<!-- <app-database></app-database> -->
+<app-assset-card></app-assset-card>
+
 <!-- <app-drop-down-property-types></app-drop-down-property-types> -->
 
 
