--- a/Yad2Replicate/src/app/assset-card/assset-card.component.scss
+++ b/Yad2Replicate/src/app/assset-card/assset-card.component.scss
@@ -1,16 +1,18 @@
 *{
   font-size: 0.8rem;
+
 }
 .all-appartment-container{
   display: flex;
   flex-direction: column;
   gap: 5px;
+  align-items: center;
 
 }
 .external-container{
   width: 600px;
   height: 120px;
-  background-color: #f7dc99;
+  background-color: #ebdab2;
     display: flex;
     gap: 15px;
 
@@ -35,7 +37,7 @@
   display: none;
 }
 
-img{
+.profile-pic{
   width: 110px;
   height: 110px;
   margin: 3px;
@@ -66,6 +68,60 @@ p{
 
 }
 
+.slide-down-container{
+  width: 500px;
+  margin: 35px;
+}
+.slide-down-container-hide{
+  display: none;
+}
+
+h3{
+  font-weight: 700;
+}
+.asset-description{
+  font-size: 0.8rem;
+  font-weight: 500;
+
+}
+.sign-container{
+  display: flex;
+  flex-wrap: wrap;
+  // flex-direction: row;
+  justify-content: flex-start;
+
+
+}
+
+
+.internal-sign-container{
+  display: flex;
+  justify-content: flex-start;
+  align-items:center;
+  width: 110px;
+  padding: 10px;
+}
+.internal-sign-container-not{
+  display: flex;
+  justify-content: flex-start;
+  align-items:center;
+  width: 110px;
+  padding: 10px;
+  opacity: 0.4;
+}
+
+
+
+.sign-img{
+  max-width: 20px;
+  max-height: 23px;
+}
+
+.sign-p{
+  font-size: 0.8rem;
+  margin: 0;
+}
+
 @media (min-width:880px) {
   // .external-container{
   //   display: flex;
@@ -94,6 +150,10 @@ p{
   .custom-hr{
     display: none;
   }
+
+
+
+
 
 
 }
