--- a/Yad2Replicate/src/app/app.component.html
+++ b/Yad2Replicate/src/app/app.component.html
@@ -22,8 +22,7 @@
 <router-outlet></router-outlet>
 
 <!-- <app-database></app-database> -->
-<app-assset-card></app-assset-card>
-
+<!-- <app-asset-list></app-asset-list> -->
 <!-- <app-drop-down-property-types></app-drop-down-property-types> -->
 
 
