--- a/Yad2Replicate/src/app/assset-card/assset-card.component.scss
+++ b/Yad2Replicate/src/app/assset-card/assset-card.component.scss
@@ -10,24 +10,52 @@
 
 }
 .external-container{
-  width: 600px;
-  height: 120px;
-  background-color: #ebdab2;
+  width: 720px;
+  height: 90px;
     display: flex;
-    gap: 15px;
-
-
+    align-items: center;
+    gap: 3px;
+    background-color: #ffe4a9;
+    border: 2px solid rgba(0,0,0,.1);
+    // transition: all 0.1s ease; /* Smooth transition for hover effect */
+  border-radius: 4px;
 }
+.external-container:hover {
+  border: 1px solid rgba(0,0,0,.1); /* gold border */
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1); /* shadow appears on hover */
+}
+
 
 .property-details-container{
   width: 90%;
   padding: 10px;
-  p{
-    margin: 0px;
+  .addres-container{
+    width: 160px;
+
+    overflow: hidden; /* Hide overflow text */
+    white-space: nowrap; /* Prevent text from wrapping */
+    text-overflow: ellipsis; /* Add ellipsis to overflow text */
+    p {
+      margin: 0; /* Remove margin if necessary */
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      font-size: 0.9rem;
+    }
+    .p-addres{
+        font-size: 1rem;
+        margin: 0px;
+        margin-top: 19px;
+
+      }
+
   }
-  .p-addres{
-    font-size: 0.8rem;
-  }
+  // p{
+  //   margin: 0px;
+  // }
+  // .p-addres{
+  //   font-size: 0.8rem;
+  // }
   .price-small-screen{
     font-weight: bold;
     font-size: 1rem;
@@ -39,14 +67,22 @@
 
 .profile-pic{
   width: 110px;
-  height: 110px;
-  margin: 3px;
+  height: 75px;
+  margin:  6px 6px 4px 9px;
+  padding: 0px;
   border-radius: 3px;
 
 }
+
+
+
 .button-container{
   display: flex;
   justify-content: space-around;
+  width: 120px;
+  // border-left: 1px solid rgba(0,0,0,.1);
+  // border-right: 1px solid rgba(0,0,0,.1);
+
 }
 .p-lable{
   display: flex;
@@ -63,17 +99,34 @@
   background-color: rgb(172, 172, 172); /* Color of the horizontal line */
   margin: 0; /* Adjust margins as needed */
 }
+.custom-line{
+  height: 86px;
+  margin: 0;
+  padding: 0;
+}
 p{
   font-size: 1rem;
 
 }
 
 .slide-down-container{
-  width: 500px;
+  width: 440px;
   margin: 35px;
 }
 .slide-down-container-hide{
   display: none;
+}
+
+.asset-details-container{
+ display: flex;
+ justify-content: space-between;
+ p{
+  font-size: 0.8rem;
+ }
+ span{
+  font-size: 0.8rem;
+  font-weight: 700;
+ }
 }
 
 h3{
@@ -137,8 +190,12 @@ h3{
   .price-small-screen{
     display: none;
   }
+  .container-price-big-screen{
+    width: 100px;
+  }
   .price-big-screen{
     display: block;
+    margin-top: 31px;
   }
   .button-container{
     display: flex;
