--- a/Yad2Replicate/src/app/search-property-bar/search-bar/search-bar.component.scss
+++ b/Yad2Replicate/src/app/search-property-bar/search-bar/search-bar.component.scss
@@ -1,12 +1,15 @@
 .external-container{
   max-width: 1100px;
-  min-height: 300px;
+  min-height: 200px;
   box-shadow: 0 2px 6px 0 rgba(0,0,0,.1);
 
   background-color: white;
   padding: 20px;
   border-radius: 4px;
 
+}
+form{
+  margin-bottom: 20px;
 }
 .first-container{
   display: flex;
@@ -26,7 +29,6 @@
 //   flex-direction: column;
 // }
 
-//
 
 .asset-info {
   font-family: Arial, sans-serif;
