--- a/Yad2Replicate/src/styles.scss
+++ b/Yad2Replicate/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap');
+
 *{
   direction: rtl;
   box-sizing: border-box;
@@ -7,7 +9,12 @@
 
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html{ height: 100%;  }
+
+body{
+  margin: 0;
+  font-family: Rubik,sans-serif;
+  height: 100%;
+}
 
 // @import "@angular/material/prebuilt-themes/indigo-pink.scss"
